<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/workoutDropdownInput"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/entryTimeInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/inputTextHint"
            android:inputType="number"/>

        <Button
            android:id="@+id/addEntryButton"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/addEntryButtonText" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="520dp">

        <LinearLayout
            android:id="@+id/vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/statButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rotationX="0"
        android:scaleX="1"
        android:scaleY="1"
        android:text="@string/statButtonLabel"
        android:textSize="25sp" />
</LinearLayout>